--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TODO supply a title</title>
+        <title>Página inicial</title>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>
+            Verificar o uso de um index.php
+        </div>
     </body>
 </html>
