--- a/public_html/_modelohtml.html
+++ b/public_html/_modelohtml.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
     <head>
-        <link rel="stylesheet" href="../_css/estilo.css" type="text/css"/>
         <meta charset="UTF-8"/>
+        <link rel="stylesheet" href="../_css/estilo.css" type="text/css"/>
         <title>Curso de PHP - CursoemVideo.com</title>
     </head>
     <body>
+        <!--
+            @Autor : HeltonBValim
+            Arquivo modelo para o curso de HTML5
+        -->
         <div>
 
         </div>
