--- a/public_html/_modelohtml.html
+++ b/public_html/_modelohtml.html
@@ -2,16 +2,17 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../_css/estilo.css" type="text/css"/>
-        <title>Curso de PHP - CursoemVideo.com</title>
+        <title>Modelo.html</title>
     </head>
     <body>
         <!--
             @Autor : HeltonBValim
             Arquivo modelo para o curso de HTML5
         -->
-        <div>
-
-        </div>
+        <main>
+            <h1>Modelo<h1>
+        </main>
     </body>
 </html>
