--- a/public_html/observacoes.html
+++ b/public_html/observacoes.html
@@ -19,6 +19,25 @@
             "&lt;del&gt;&lt;/del&gt;" é o mesmo que "&lt;s&gt;&lt;/s&gt;" coloca uma linha sobre o texto <del>informando que ele foi apagado.</del><br/>
             "&lt;code&gt;&lt;/code&gt;" mostra trechos de código embutido e deve ser combinado com  "&lt;pre&gt;&lt;/pre&gt;".<br/>
             "&lt;sup&gt;&lt;/sup&gt;" para texto <sup>sobreescrito</sup> e "&lt;sub&gt;&lt;/sub&gt;" para texto <sub>subescrito</sub><br/>
+            <h3>Listas</h3>
+            <h5>Ordenadas</h5>
+            <ol type="I" start="5">
+                <li>Home</li>
+                <li>Especificações</li>
+                <li>Fotos</li>
+                <li>Multimídia</li>
+                <li>Fale conosco</li>
+            </ol>
+            <h5>Não Ordenadas</h5>
+            <ul type="circle">
+                <li>Home</li>
+                <li>Especificações</li>
+                <li>Fotos</li>
+                <li>Multimídia</li>
+                <li>Fale conosco</li>
+            </ol>
+            <h3>Margens</h3>
+            Em ordem cima, direita, baixo, esquerda.<br/>
             <h3>Símbolos especiais</h3>
             &AMP;<br/>
             &lt;<br/>
