--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8"/>
+        <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
         <title>Tudo sobre o Google Glass</title>
     </head>
     <body>
@@ -11,13 +12,17 @@
             <h2>A revolução do Google está chegando</h2>
 
             <img src="_imagens/glass-oculos-preto-peq.png" width="200" height="121" alt="glass-oculos-preto-peq"/>
-
-            Menu Principal
-            - Home
-            - Especificações
-            - Fotos
-            - Multimídia
-            - Fale conosco
+            
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul>
+                    <li><a href="index.html" target="_self">Home</a></li>
+                    <li><a href="especs.html" target="_self">Especificações</a></li>
+                    <li><a href="fotos.html" target="_self">Fotos</a></li>
+                    <li><a href="multimidia.html" target="_self">Multimídia</a></li>
+                    <li><a href="fale-conosco.html" target="_self">Fale conosco</a></li>
+                </ul>
+            </nav>
             </header>
             
             <hgroup>
@@ -29,12 +34,18 @@
 
             <h2>O que é</h2>
             <p>O <b>Google Glass</b> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. 
-            Também chamado de <em>Project Glass</em>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar 
+                Também chamado de <em><a href="https://www.google.com/glass/start/" target="_blank">Project Glass</a></em>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar 
             vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em 
             fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes 
             anti-furto e de desbloqueio de tela para o acessório.</p>
 
-            [AQUI ENTRA UMA FOTO]
+            <figure class="foto-legenda">
+                <img src="_imagens/glass-quadro-homem-mulher.jpg" alt="Google Glass - 001"/>
+                <figcaption>
+                    <h3>Google Glass</h3>
+                    <p>Uma nova maneira de ver o mundo.</p>
+                </figcaption>
+            </figure>
 
             <h2>Data de lançamento</h2>
             <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a 
