--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,7 +11,7 @@
             <h1>Google Glass</h1>
             <h2>A revolução do Google está chegando</h2>
 
-            <img src="_imagens/glass-oculos-preto-peq.png" width="200" height="121" alt="glass-oculos-preto-peq"/>
+            <img id="icone" src="_imagens/glass-oculos-preto-peq.png" width="200" height="121" alt="glass-oculos-preto-peq"/>
             
             <nav id="menu">
                 <h1>Menu Principal</h1>
