--- a/public_html/fale-conosco.html
+++ b/public_html/fale-conosco.html
@@ -1,47 +1,133 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8"/>
+        <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+        <link rel="stylesheet" type="text/css" href="_css/form.css"/>
+        <title>Tudo sobre o Google Glass</title>
+        <script src="_javascript/funcoes.js"></script>
+    </head>
+    <body>
+        <div id="interface">
+            <header id="cabecalho">
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
 
-[AQUI ENTRA UMA FOTO]
+                <img id="icone" src="_imagens/contato.png" width="200" height="121" alt="glass-oculos-preto-peq"/>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+                <nav id="menu">
+                    <h1>Menu Principal</h1>
+                    <ul>
+                        <li onmouseout="mudaFoto('_imagens/contato.png')" onmouseover="mudaFoto('_imagens/home.png')"><a href="index.html" target="_self">Home</a></li>
+                        <li onmouseout="mudaFoto('_imagens/contato.png')" onmouseover="mudaFoto('_imagens/especificacoes.png')"><a href="specs.html" target="_self">Especificações</a></li>
+                        <li onmouseout="mudaFoto('_imagens/contato.png')" onmouseover="mudaFoto('_imagens/fotos.png')"><a href="fotos.html" target="_self">Fotos</a></li>
+                        <li onmouseout="mudaFoto('_imagens/contato.png')" onmouseover="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html" target="_self">Multimídia</a></li>
+                        <li onmouseout="mudaFoto('_imagens/contato.png')" onmouseover="mudaFoto('_imagens/contato.png')"><a href="fale-conosco.html" target="_self">Fale conosco</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <section id="corpo-full">
+                <article id="noticia-principal">
+                    <header id="cab-artigo">
+                        <hgroup>
+                            <h3>Fale Conosco > Contato</h3>
+                            <h1>Formulário de Contato</h1>
+                            <h2>por Gustavo Guanabara</h2>
+                            <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                        </hgroup>
+                    </header>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+                    <form method="post" id="fContado" action="mailto:helton74@gmail.com">
+                        <fieldset id="usuario">
+                            <legend>Identificação do Usuário</legend>
+                            <p><label for="cNome">Nome:</label> <input type="text" name="tNome" id="cNome" size="20" maxlength="40" placeholder="Nome completo"/></p> 
+                            <p><label for="cSenha">Senha:</label> <input type="password" name="tSenha" id="cSenha" size="10" maxlength="10"/></p>
+                            <p><label for="cEmail">E-mail:</label> <input type="email" name="tEmail" id="cEmail" size="20" maxlength="40" placeholder="E-mail válido"/></p>
+                            <fieldset id="sexo">
+                                <legend>Sexo:</legend>
+                                <input type="radio" name="rSexo" id="cMasc"/><label for="cMasc"/>Masculino</label><br/>
+                                <input type="radio" name="rSexo" id="cFem"/><label for="cFem">Feminino</label>
+                            </fieldset>
+                            <p><label for="cNasc">Data de Nascimento:</label> <input type="date" name="dNasc" id="cNasc"/></p>
+                        </fieldset>
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+                        <fieldset id="endereco">
+                            <legend>Endereço do Usuário</legend>
+                            <p><label for="cEnd">Logradouro:</label> <input type="text" name="tEnd" id="cEnd" size="25" maxlength="40" placeholder="Endereço"/></p>
+                            <p><label for="cNum">Número:</label> <input type="number" name="nNum" id="cNum" min="0" max="99999"/></p>
+                            <p><label for="cEst">Estado:</label>
+                                <select name="sEst" id="cEst">
+                                    <optgroup label="Região NORTE">
+                                        <option value="AP">Amapá(AP)
+                                        <option value="AM">Amazonas(AM)
+                                        <option value="PA">Pará(PA)
+                                        <option value="RO">Rondônia(RO)
+                                        <option value="RR">Roraima(RR)
+                                        <option value="TO">Tocantins(TO)
+                                    </optgroup>
+                                    <optgroup label="Região NORDESTE">
+                                        <option value="BA">Bahia(BA)
+                                        <option value="CE">Ceará(CE)
+                                        <option value="MA">Maranhão(MA)
+                                        <option value="PB">Paraíba(PB)
+                                        <option value="PE">Pernambuco(PE)
+                                        <option value="PI">Piauí(PI)
+                                        <option value="RN">Rio Grande do Norte(RN)
+                                        <option value="SE">Sergipe(SE)
+                                    </optgroup>
+                                    <optgroup label="Região CENTRO-OESTE">
+                                        <option value="GO">Goiás(GO)
+                                        <option value="MS">Mato Grosso do Sul(MS)
+                                        <option value="MT">Mato Grosso(MT)
+                                    </optgroup>
+                                    <optgroup label="Região SUDESTE">
+                                        <option value="ES">Espírito Santo(ES)
+                                        <option value="MG">Minas Gerais(MG)
+                                        <option value="RJ">Rio de Janeiro(RJ)
+                                        <option value="SP">São Paulo(SP)
+                                    </optgroup>
+                                    <optgroup label="Região SUL">
+                                        <option value="PR">Paraná(PR)
+                                        <option value="RS">Rio Grande do Sul(RS)
+                                        <option value="SC">Santa Catarina(SC)
+                                    </optgroup>
+                                </select></p>
+                                <p><label for="cCid">Cidade:</label> <input type="text" name="tCid" id="cCid" size="20" maxlength="40" list="cidades"/>
+                                <datalist id="cidades">
+                                    <option value="Rio de Janeiro"></option>
+                                    <option value="Nova Iguaçú"></option>
+                                    <option value="Niterói"></option>
+                                    <option value="Belford Roxo"></option>
+                                </datalist>
+                            </p>
+                        </fieldset>
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+                        <fieldset id="mensagem">
+                            <legend>Mensagem do Usuário</legend>
+                            <p><label for="cUrg">Grau de Urgência:</label> Min.<input type="range" name="rUrg" id="cUrg" min="0" max="10" step="2"/>Máx.</p>
+                            <p><label for="cMsg">Mensagem:</label> <textarea name="tMsg" id="cMsg" cols="45" rows="5" placeholder="Digite sua mensagem."></textarea></p>
+                        </fieldset>
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+                        <fieldset id="pedido">
+                            <legend>Quero um Google Glass</legend>
+                            <p>Gostaria de adquirir um Google Glass quando disponível</p>
+                            <p><label>Cor:</label></p>
+                            <p><label>Quantidade:</label></p>
+                            <p><label>Preço Total: R$</label></p>
+                        </fieldset>
 
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+                        <input type="submit" value="Enviar" id="bEnviar"/>
+                    </form>
+                </article>
+            </section>
 
-
-[BOTÃO ENVIAR]
-
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+            <footer id="rodape">
+                <p>
+                    Copyright 2013 - by Gustavo Guanabara<br/>
+                    <a href="http://www.facebook.com/cursosemvideo" target="_blank">Facebook</a> | 
+                    <a href="http://www.twitter.com/cursosemvideo" target="_blank">Twitter</a>
+                </p>
+            </footer>
+        </div>
+    </body>
+</html>
