--- a/public_html/fotos.html
+++ b/public_html/fotos.html
@@ -1,29 +1,64 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8"/>
+        <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+        <link rel="stylesheet" type="text/css" href="_css/fotos.css"/>
+        <title>Tudo sobre o Google Glass</title>
+        <script src="_javascript/funcoes.js"></script>
+    </head>
+    <body>
+        <div id="interface">
+            <header id="cabecalho">
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
 
-[AQUI ENTRA UMA FOTO]
+                <img id="icone" src="_imagens/fotos.png" width="200" height="121" alt="glass-oculos-preto-peq"/>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+                <nav id="menu">
+                    <h1>Menu Principal</h1>
+                    <ul>
+                        <li onmouseout="mudaFoto('_imagens/fotos.png')" onmouseover="mudaFoto('_imagens/home.png')"><a href="index.html" target="_self">Home</a></li>
+                        <li onmouseout="mudaFoto('_imagens/fotos.png')" onmouseover="mudaFoto('_imagens/especificacoes.png')"><a href="specs.html" target="_self">Especificações</a></li>
+                        <li onmouseout="mudaFoto('_imagens/fotos.png')" onmouseover="mudaFoto('_imagens/fotos.png')"><a href="fotos.html" target="_self">Fotos</a></li>
+                        <li onmouseout="mudaFoto('_imagens/fotos.png')" onmouseover="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html" target="_self">Multimídia</a></li>
+                        <li onmouseout="mudaFoto('_imagens/fotos.png')" onmouseover="mudaFoto('_imagens/contato.png')"><a href="fale-conosco.html" target="_self">Fale conosco</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <section id="corpo-full">
+                <article id="noticia-principal">
+                    <header id="cab-artigo">
+                        <hgroup>
+                            <h3>Glass > Fotos</h3>
+                            <h1>Galeria de Imagens do Google Glass</h1>
+                            <h2>por Gustavo Guanabara</h2>
+                            <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                        </hgroup>
+                    </header>
+                    <p>
+                        Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como 
+                        recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma 
+                        versão ampliada e com uma breve descrição.
+                    </p>
+                    <ul id="album">
+                        <li id="foto001"><span>Agenda e lembretes</span></li>
+                        <li id="foto002"><span>Sergey Brin usando o Glass</span></li>
+                        <li id="foto003"><span>Leve e compacto</span></li>
+                        <li id="foto004"><span>Sensação de uma tela de 50"</span></li>
+                        <li id="foto005"><span>Vários tipos de lente</span></li>
+                        <li id="foto006"><span>Informações importantes</span></li>
+                    </ul>
+                </article>
+            </section>
 
-Glass > Fotos
-Galeria de Imagens do Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
-
-Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
-
-- Agenda e lembretes
-- Sergey Brin usando o Glass
-- Leve e compacto
-- Sensação de uma tela de 50"
-- Vários tipos de lente
-- Informações importantes
-
-Copyright 2013 - by Gustavo Guanabara
-
-Facebook | Twitter
+            <footer id="rodape">
+                <p>
+                    Copyright 2013 - by Gustavo Guanabara<br/>
+                    <a href="http://www.facebook.com/cursosemvideo" target="_blank">Facebook</a> | 
+                    <a href="http://www.twitter.com/cursosemvideo" target="_blank">Twitter</a>
+                </p>
+            </footer>
+        </div>
+    </body>
+</html>
