--- a/public_html/multimidia.html
+++ b/public_html/multimidia.html
@@ -1,25 +1,66 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8"/>
+        <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+        <link rel="stylesheet" type="text/css" href="_css/media.css"/>
+        <title>Tudo sobre o Google Glass</title>
+        <script src="_javascript/funcoes.js"></script>
+    </head>
+    <body>
+        <div id="interface">
+            <header id="cabecalho">
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
 
-[AQUI ENTRA UMA FOTO]
+                <img id="icone" src="_imagens/multimidia.png" width="200" height="121" alt="glass-oculos-preto-peq"/>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+                <nav id="menu">
+                    <h1>Menu Principal</h1>
+                    <ul>
+                        <li onmouseout="mudaFoto('_imagens/multimidia.png')" onmouseover="mudaFoto('_imagens/home.png')"><a href="index.html" target="_self">Home</a></li>
+                        <li onmouseout="mudaFoto('_imagens/multimidia.png')" onmouseover="mudaFoto('_imagens/especificacoes.png')"><a href="specs.html" target="_self">Especificações</a></li>
+                        <li onmouseout="mudaFoto('_imagens/multimidia.png')" onmouseover="mudaFoto('_imagens/fotos.png')"><a href="fotos.html" target="_self">Fotos</a></li>
+                        <li onmouseout="mudaFoto('_imagens/multimidia.png')" onmouseover="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html" target="_self">Multimídia</a></li>
+                        <li onmouseout="mudaFoto('_imagens/multimidia.png')" onmouseover="mudaFoto('_imagens/contato.png')"><a href="fale-conosco.html" target="_self">Fale conosco</a></li>
+                    </ul>
+                </nav>
+            </header>
+            
+            <section id="corpo-full">
+                <article id="noticia-principal">
+                    <header id="cab-artigo">
+                        <hgroup>
+                            <h3>Glass > Multimídia</h3>
+                            <h1>Sons e Vídeos</h1>
+                            <h2>por Gustavo Guanabara</h2>
+                            <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                        </hgroup>
+                    </header>
+                    <div id="tv-radio">
+                        <audio id="musica" controls="controls">
+                            <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"/>
+                            <source src="_media/2009-lovers-carvings-bibio.m4a" type="audio/x-aac"/>
+                            <source src="_media/2009-lovers-carvings-bibio.ogg" type="audio/ogg"/>
+                            Desculpe mas não foi possível carregar o áudio.
+                        </audio>
+                        <video id="filme" controls="controls" poster="_imagens/video-mini03.jpg">
+                            <source src="_media/getting-started.mp4" type="audio/mp4"/>
+                            <source src="_media/getting-started.webm" type="audio/webm"/>
+                            <source src="_media/getting-started.ogv" type="audio/ogg"/>
+                            Desculpe mas não foi possível carregar o vídeo.
+                        </video>
+                    </div>
+                </article>
+            </section>
 
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
-
-
-Áudio e Vídeo
-
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
-
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+            <footer id="rodape">
+                <p>
+                    Copyright 2013 - by Gustavo Guanabara<br/>
+                    <a href="http://www.facebook.com/cursosemvideo" target="_blank">Facebook</a> | 
+                    <a href="http://www.twitter.com/cursosemvideo" target="_blank">Twitter</a>
+                </p>
+            </footer>
+        </div>
+    </body>
+</html>
