--- a/public_html/specs.html
+++ b/public_html/specs.html
@@ -1,23 +1,79 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8"/>
+        <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+        <link rel="stylesheet" type="text/css" href="_css/specs.css"/>
+        <title>Tudo sobre o Google Glass</title>
+        <script src="_javascript/funcoes.js"></script>
+    </head>
+    <body>
+        <div id="interface">
+            <header id="cabecalho">
+                <h1>Google Glass</h1>
+                <h2>A revolução do Google está chegando</h2>
 
-[AQUI ENTRA UMA FOTO]
+                <img id="icone" src="_imagens/especificacoes.png" width="200" height="121" alt="glass-oculos-preto-peq"/>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+                <nav id="menu">
+                    <h1>Menu Principal</h1>
+                    <ul>
+                        <li onmouseout="mudaFoto('_imagens/especificacoes.png')" onmouseover="mudaFoto('_imagens/home.png')"><a href="index.html" target="_self">Home</a></li>
+                        <li onmouseout="mudaFoto('_imagens/especificacoes.png')" onmouseover="mudaFoto('_imagens/especificacoes.png')"><a href="specs.html" target="_self">Especificações</a></li>
+                        <li onmouseout="mudaFoto('_imagens/especificacoes.png')" onmouseover="mudaFoto('_imagens/fotos.png')"><a href="fotos.html" target="_self">Fotos</a></li>
+                        <li onmouseout="mudaFoto('_imagens/especificacoes.png')" onmouseover="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html" target="_self">Multimídia</a></li>
+                        <li onmouseout="mudaFoto('_imagens/especificacoes.png')" onmouseover="mudaFoto('_imagens/contato.png')"><a href="fale-conosco.html" target="_self">Fale conosco</a></li>
+                    </ul>
+                </nav>
+            </header>
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+            <section id="corpo-full">
+                <article id="noticia-principal">
+                    <header id="cab-artigo">
+                        <hgroup>
+                            <h3>Glass > Especificações</h3>
+                            <h1>Raio-X no Google Glass</h1>
+                            <h2>por Gustavo Guanabara</h2>
+                            <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                        </hgroup>
+                    </header>
+                    <p>
+                        Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho 
+                        vai te levar a um lugar cheio de novas informações.
+                    </p>                
+                    <section id="conteudo">
+                        <!-- Nesta parte do fonte optei por utilizar uma table a fim de melhor distribuir a informação na tela visto que nos testes
+                        o visual não foi o mesmo do visto em aula.
+                        Também utilizei uma imagem png em substituição à origianal por razões semelhantes.
+                        O parâmetro "scrolling" utilizado no componente "iframe" foi necessário, pois as configurações mostradas em aula não funcionaram.
+                        Possível imcompatibilidade...-->
+                        <table id="oculos">
+                            <tr>
+                                <td>
+                                    <img id="gglass" src="_imagens/glass-esquema-marcado.png" usemap="#mapaimg" alt="Imagem mapeada do Google Glass">
+                                    <map name="mapaimg">
+                                        <area shape="poly" coords="127,153,185,146,186,170,129,179" href="google-glass.html#tela" target="janela" alt="Tela do Google Glass"/>
+                                        <area shape="circle" coords="111,170,8" href="google-glass.html#camera" target="janela" alt="Câmera do Google Glass"/>
+                                        <area shape="poly" coords="19,100,57,151,57,174,18,117" href="google-glass.html#sensores" target="janela" alt="Sensores do Google Glass"/>
+                                        <area shape="circle" coords="53,36,8" href="google-glass.html#bateria" target="janela" alt="Bateria do Google Glass"/>
+                                    </map>
+                                </td>
+                                <td>
+                                    <iframe name="janela" id="frame-specs" src="google-glass.html" scrolling="no">Seu navegador não suporta visualização com objeto iframe</iframe>
+                                </td>
+                            </tr>	
+                        </table>
+                    </section>
+                </article>
+            </section>
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
-
-[AQUI ENTRA UMA IMAGEM]
-
-Copyright 2013 - by Gustavo Guanabara<
-Facebook | Twitter
+            <footer id="rodape">
+                <p>
+                    Copyright 2013 - by Gustavo Guanabara<br/>
+                    <a href="http://www.facebook.com/cursosemvideo" target="_blank">Facebook</a> | 
+                    <a href="http://www.twitter.com/cursosemvideo" target="_blank">Twitter</a>
+                </p>
+            </footer>
+        </div>
+    </body>
+</html>
