--- a/public_html/specs.html
+++ b/public_html/specs.html
@@ -71,7 +71,9 @@
                 <p>
                     Copyright 2013 - by Gustavo Guanabara<br/>
                     <a href="http://www.facebook.com/cursosemvideo" target="_blank">Facebook</a> | 
-                    <a href="http://www.twitter.com/cursosemvideo" target="_blank">Twitter</a>
+                    <a href="http://www.twitter.com/cursosemvideo" target="_blank">Twitter</a><br/>
+                    Aula finalizada em 02/11/2020, por <a href="https://heltonbvalim.github.io/curriculum_vitae/" target="_blank">HeltonBValim</a></br>
+                    Os arquivos estão disponíveis no meu <a href="https://github.com/HeltonBValim/curriculum_vitae" target="_blank">GitHub</a>.
                 </p>
             </footer>
         </div>
